# package-python-vk-api

./: .gitignore  README.md  pyproject.toml
tests/: test_vk_api.py
vk_api/: __init__.py  exceptions.py  request.py  schemas.py  vk_api.py
