[tool.poetry]
name = "vk-api"
version = "0.1.1"
description = ""
authors = ["Arsen Petrov <pbmspa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pydantic = "^1.9.0"
python-magic = "^0.4.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
